// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup component renders correctly 1`] = `
<div>
  <div
    class="RadioGroup-root-1"
  >
    <div
      class="RadioGroup-container-2"
    >
      <div
        class="RadioButton-root-4 RadioGroup-item-3"
      >
        <input
          class="RadioButton-input-6"
          id="radio-deckType-label"
          name="deckType"
          type="radio"
          value="label"
        />
        <label
          class="RadioButton-label-7"
          for="radio-deckType-label"
        >
          <div
            aria-disabled="false"
            class="MuiButtonBase-root RadioButton-text-8"
            role="button"
            tabindex="-1"
          >
            <span>
              Combustible (timber/plywood)
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </div>
        </label>
      </div>
      <div>
        Non-combustible (metal/concrete)
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioGroup component renders correctly with className prop 1`] = `
<div>
  <div
    class="RadioGroup-root-17 name"
  >
    <div
      class="RadioGroup-container-18"
    >
      <div
        class="RadioButton-root-20 RadioGroup-item-19"
      >
        <input
          class="RadioButton-input-22"
          id="radio-deckType-label"
          name="deckType"
          type="radio"
          value="label"
        />
        <label
          class="RadioButton-label-23"
          for="radio-deckType-label"
        >
          <div
            aria-disabled="false"
            class="MuiButtonBase-root RadioButton-text-24"
            role="button"
            tabindex="-1"
          >
            <span>
              Combustible (timber/plywood)
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </div>
        </label>
      </div>
      <div
        class="RadioButton-root-20 RadioGroup-item-19"
      >
        <input
          class="RadioButton-input-22"
          id="radio-deckType-label"
          name="deckType"
          type="radio"
          value="label"
        />
        <label
          class="RadioButton-label-23"
          for="radio-deckType-label"
        >
          <div
            aria-disabled="false"
            class="MuiButtonBase-root RadioButton-text-24"
            role="button"
            tabindex="-1"
          >
            <span>
              Non-combustible (metal/concrete)
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioGroup component renders correctly with defaultValue prop 1`] = `
<div>
  <div
    class="RadioGroup-root-25"
  >
    <div
      class="RadioGroup-container-26"
    >
      <div
        class="RadioButton-root-28 RadioGroup-item-27"
      >
        <input
          class="RadioButton-input-30"
          id="radio-deckType-label"
          name="deckType"
          type="radio"
          value="label"
        />
        <label
          class="RadioButton-label-31"
          for="radio-deckType-label"
        >
          <div
            aria-disabled="false"
            class="MuiButtonBase-root RadioButton-text-32"
            role="button"
            tabindex="-1"
          >
            <span>
              Combustible (timber/plywood)
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </div>
        </label>
      </div>
      <div
        class="RadioButton-root-28 RadioGroup-item-27"
      >
        <input
          class="RadioButton-input-30"
          id="radio-deckType-label"
          name="deckType"
          type="radio"
          value="label"
        />
        <label
          class="RadioButton-label-31"
          for="radio-deckType-label"
        >
          <div
            aria-disabled="false"
            class="MuiButtonBase-root RadioButton-text-32"
            role="button"
            tabindex="-1"
          >
            <span>
              Non-combustible (metal/concrete)
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;
